--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <meta
       name="keywords"
-      content="text to handwriting, text-to-handwrting, saurabh text to handwriting, convert text to image, write assignment online"
+      content="text to handwriting, text-to-handwrting, rohit text to handwriting, convert text to image, write assignment online"
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="author" content="Saurabh Daware" />
@@ -39,7 +39,7 @@
     <meta property="og:title" content="Text to Handwriting" />
     <meta
       property="og:url"
-      content="https://saurabhdaware.github.io/text-to-handwriting"
+      content="https://rhtsinha.github.io/writing"
     />
     <meta
       property="og:description"
@@ -59,9 +59,6 @@
     />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="337" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@saurabhcodes" />
 
     <title>Text to Handwriting</title>
 
@@ -121,45 +118,7 @@
         /></span>
       </button>
       <h1>Text to Handwriting</h1>
-      <section id="donations" style="font-size: 1rem; padding: 20px 0px;">
-        <div class="display-flex responsive-flex">
-          <div class="flex-1">
-            <div id="covid-donations">
-              <b>Important!</b><br />
-              <br />
-              Hey, my country (India) is going through the second wave of covid
-              and our healthcare system has collapsed. I request you to donate
-              any amount you can to these NGOs that are helping people with
-              oxygen, food, and a lot of other resources.
-              <ul>
-                <li>
-                  <a href="https://hemkuntfoundation.com/donate-now/"
-                    >Hemkunt Foundation</a
-                  >
-                  (Helping people with oxygen)
-                </li>
-                <li>
-                  <a href="https://indiafightscorona.giveindia.org/"
-                    >indiafightscorona.giveindia.org</a
-                  >
-                  (Multiple fundraisers related to covid)
-                </li>
-                <li>
-                  More at
-                  <a href="https://donate.indiacovidresources.in/"
-                    >https://donate.indiacovidresources.in/</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <br /><br />Also, This webpage has had 100k+ pageviews this April so
-            far. <br />
-            <br />If you donate more than 8,000 ₹ to any of the covid
-            fundraisers, I will put up your company/project logo or any image
-            here for a month. <br /><br />
-            DM me your receipts on
-            <a href="https://twitter.com/saurabhcodes">Twitter @saurabhcodes</a>
-          </div>
+      
           <div style="padding: 40px 20px;">
             <br /><img
               width="200"
@@ -170,7 +129,7 @@
         </div>
         <div class="donations-list">
           <h2>Some Kind People Who Donated for The Covid Relief</h2>
-          <a href="https://piyushbanik.io/">
+          <a href="https://">
             <img
               style="border-radius: 10px;"
               height="80"
@@ -496,98 +455,7 @@
         </div>
       </section>
 
-      <section id="sponsors">
-        <h2>🤗 Sponsors</h2>
-        <p>
-          Donate 8,000INR to any COVID Fundraisers/NGOs and get your logo at the
-          top! DM me receipts on
-          <a href="https://twitter.com/saurabhcodes/">Twitter @saurabhcodes</a>
-        </p>
-        <!-- <p>
-          This tool is completely free and neither stores any of your data for
-          money so maybe you can consider being patron or making an one time
-          payment with buy me a coffee to help sustain 🤗
-        </p>
-        <p>
-          <a href="https://www.patreon.com/bePatron?u=31891872">
-            <img
-              loading="lazy"
-              style="border-radius: 4px;"
-              alt="Buy me a Coffee Button"
-              width="200"
-              src="https://c5.patreon.com/external/logo/become_a_patron_button.png"
-            />
-          </a>
-          &nbsp;
-          <a href="https://www.buymeacoffee.com/saurabhdaware">
-            <img
-              loading="lazy"
-              style="border-radius: 4px;"
-              alt="Buy me a Coffee Button"
-              width="200"
-              src="https://cdn.buymeacoffee.com/buttons/default-yellow.png"
-            />
-          </a>
-        </p> -->
-      </section>
-
-      <section id="github-contributors">
-        <h2>👫 GitHub Contributors</h2>
-        <div class="project-contributors" id="project-contributors"></div>
-      </section>
-
-      <section id="faq">
-        <h2>❓ FAQs (Frequently Asked Questions)</h2>
-        <div>
-          <h3>1. How can I add my own Handwriting?</h3>
-          <p>
-            Check out
-            <a href="#how-to-add-handwriting"
-              >Guide to add your own Handwriting</a
-            >
-          </p>
-        </div>
-        <div>
-          <h3>2. Where can I get more fonts?</h3>
-          <p>
-            You can use fonts from
-            <a
-              href="https://www.quantumenterprises.co.uk/handwriting-fonts/fontvault.htm"
-              >https://www.quantumenterprises.co.uk/handwriting-fonts/fontvault.htm</a
-            >
-          </p>
-        </div>
-        <div>
-          <h3>3. There are gaps between letters in custom fonts</h3>
-          <p>
-            This is a known issue that we haven't figured out the solution for.
-            As a temporary workaround, there is letter spacing and word spacing
-            option to adjust the gap.
-          </p>
-        </div>
-        <div>
-          <h3>4. Where can I request for features and report bugs?</h3>
-          <p>
-            You can't. This is a read-only project and there will not be any
-            improvements in the project
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer style="padding: 40px 0px 10px 0px;">
-      Thank you for using Text to Handwriting! You can follow me on
-      <a href="https://twitter.com/saurabhcodes">Twitter @saurabhcodes</a>
-      <br /><br />Do star the
-      <a href="https://github.com/saurabhdaware/text-to-handwriting"
-        >Text-to-Handwriting GitHub Repository</a
-      >
-      and If you're using it for writing assignments, make sure you use it at
-      your own risk and If it fails and your teacher finds this tool, ask them
-      to star my GitHub as well :D <br />
-      <br />byeeee! <br /><br />
-      ~ Saurabh (<a href="https://saurabhdaware.in">https://saurabhdaware.in</a
-      >)
-    </footer>
+      
 
     <!-- Fixed Elements -->
     <section class="draw-container popup-container">
@@ -634,11 +502,11 @@
     <!-- GitHub Corner logo -->
     <a
       tabindex="0"
-      href="https://github.com/saurabhdaware/text-to-handwriting"
+      href="https://rohitsinha.in"
       rel="noopener noreferrer"
       target="_blank"
       class="github-corner"
-      aria-label="View source on GitHub"
+      aria-label="Home"
     >
       <svg
         width="80"
