--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         </div>
       </div>
     </section>
-    <!-- GitHub Corner logo -->
+    <!-- GitHub Corner logo 
     <a
       tabindex="0"
       href="https://rohitsinha.in"
@@ -535,7 +535,7 @@
           class="octo-body"
         ></path>
       </svg>
-    </a>
+    </a> -->
 
     <script
       src="./js/vendors/html2canvas.min.js"
