--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-125454191-4"
+      src=""
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
