--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       content="text to handwriting, text-to-handwrting, rohit text to handwriting, convert text to image, write assignment online"
     />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="author" content="Saurabh Daware" />
-    <meta name="copyright" content="Saurabh Daware" />
+    <meta name="author" content="Rohit Sinha" />
+    <meta name="copyright" content="S.Daware" />
     <meta name="robots" content="follow" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Text to Handwriting" />
