--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
               <a
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://www.calligraphr.com/en/"
-                >Calligraphr</a
+                href="https://fontforge.org/en-US/"
+                >FontForge</a
               >
               that let you do that.
             </li>
