--- a/index.html
+++ b/index.html
@@ -519,6 +519,9 @@
       </svg>
     </a> -->
 
+    <footer style="padding: 40px 0px 10px 0px;">
+    <a> src="https://rohitsinha.in" Rohit Sinha </a>
+    </footer>
     <script
       src="./js/vendors/html2canvas.min.js"
       crossorigin="anonymous"
