--- a/index.html
+++ b/index.html
@@ -518,10 +518,11 @@
         ></path>
       </svg>
     </a> -->
-
+    <center>
     <footer style="padding: 40px 0px 10px 0px;">
-    <a> src="https://rohitsinha.in" Rohit Sinha </a>
+    <a> href="https://rohitsinha.in" Rohit Sinha </a>
     </footer>
+    </center>
     <script
       src="./js/vendors/html2canvas.min.js"
       crossorigin="anonymous"
