--- a/index.html
+++ b/index.html
@@ -520,7 +520,12 @@
     </a> -->
     <center>
     <footer style="padding: 40px 0px 10px 0px;">
-    <a> href="https://rohitsinha.in" Rohit Sinha </a>
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://rohitsinha.in"
+                >Developed by Rohit Sinha</a
+              >
     </footer>
     </center>
     <script
