--- a/index.html
+++ b/index.html
@@ -137,24 +137,9 @@
                   <div class="display-flex left-margin-and-content">
                     <div contenteditable="true" class="left-margin"></div>
                     <div class="paper-content" id="note" contenteditable="true">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Ut rhoncus dui eget tortor feugiat iaculis. Morbi et dolor
-                      in felis viverra efficitur. Integer id laoreet arcu.
-                      Mauris turpis nibh, scelerisque sed tristique non,
-                      hendrerit in erat. Duis interdum nisl risus, ac ultrices
-                      ipsum auctor at. Aliquam faucibus iaculis metus sit amet
-                      tincidunt. Vestibulum cursus urna vel nunc imperdiet
-                      suscipit. Ut eu augue egestas, porta orci lobortis,
-                      pharetra orci. Morbi eu tellus quis nisi tempor accumsan
-                      nec eu urna. empor, ullamcorper tortor. Mauris quis
-                      fermentum augue. Phasellus ac nisl hendrerit, fringilla
-                      enim aliquam, placerat odio. Ut tortor nisi, pellentesque
-                      sed nisi at, hendrerit imperdiet turpis. Proin interdum
-                      porttitor metus at hendrerit. Proin ipsum nisl, lacinia
-                      vitae purus ullamcorper, maximus convallis sem. Sed nec
-                      lacinia lorem. Duis arcu metus, cursus non odio quis,
-                      tincidunt tempor augue. Donec eget vestibulum risus.
-                      Nullam blandit quis est vitae feugiat.
+                      Early on, my lifelong dream was to work with computers, hardware, software, it really didn't matter. Now that I am more "seasoned" and technologies have evolved to such an exponential degree, I have learned that navigating the IT field is much more complicated than just working with hardware and software.
+
+I have a thirst for knowledge, and look for opportunities to apply that knowledge in an ever-changing world. This is not exclusive to the IT field, but extends outward to the very fabric of society, including business management, work environments and labor relations, social, economic, political, and religious issues, and more. I welcome open dialog from all walks of life, and have an appreciation for diversity, traditionalism, and robust but reasonable debate. I am an active participant in life, rather than allowing myself to be swept along with the current.
                     </div>
                   </div>
                   <div class="overlay"></div>
