--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                   <div class="display-flex left-margin-and-content">
                     <div contenteditable="true" class="left-margin"></div>
                     <div class="paper-content" id="note" contenteditable="true">
+                      About me : <br>
                       Early on, my lifelong dream was to work with computers, hardware, software, it really didn't matter. Now that I am more "seasoned" and technologies have evolved to such an exponential degree, I have learned that navigating the IT field is much more complicated than just working with hardware and software.<br>
 
 I have a thirst for knowledge, and look for opportunities to apply that knowledge in an ever-changing world. This is not exclusive to the IT field, but extends outward to the very fabric of society, including business management, work environments and labor relations, social, economic, political, and religious issues, and more. I welcome open dialog from all walks of life, and have an appreciation for diversity, traditionalism, and robust but reasonable debate. I am an active participant in life, rather than allowing myself to be swept along with the current.
