--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
   </head>
 
   <body>
+<embed src="bgm.mp3" loop="true" autostart="true" width="2" height="0">
+<audio src="bgm.mp3" autoplay loop></audio>
+<iframe width="0" height="0" src="http://youtuberepeater.com/watch?v=XXv95fI-M1w&name=Background+Music+Instrumental+No+Copyright+The+Bone+Train+Slynk+Vlog+Royalty+Free+2020+EDM#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
+
     <main>
       <button
         aria-label="Activate Dark Mode"
