--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ I have a thirst for knowledge, and look for opportunities to apply that knowledg
     <!-- GitHub Corner logo 
     <a
       tabindex="0"
-      href="https://rohitsinha.in"
+      href="http://rohitsinha.in"
       rel="noopener noreferrer"
       target="_blank"
       class="github-corner"
