--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ I have a thirst for knowledge, and look for opportunities to apply that knowledg
               <a
                 target="_blank"
                 rel="noopener noreferrer"
-                href="https://rohitsinha.in"
+                href="http://rohitsinha.in"
                 >Developed by Rohit Sinha</a
               >
     </footer>
