--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta property="og:title" content="Text to Handwriting" />
     <meta
       property="og:url"
-      content="https://rhtsinha.github.io/writing"
+      content="https://gdkdiyxo.github.io/writing"
     />
     <meta
       property="og:description"
